--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -92,16 +92,19 @@
     <!-- order list -->
     <div class="row">
         <div class="text-center">
+            <div class="col-sm-offset-1 col-sm-10">
             <ul id="show-cart">
                 <li>???????</li>
             </ul>
             <div>You have <span id="count-cart">X</span> items in your cart</div>
             <div>Total Cart:$<span id="total-cart"></span></div>
+            </div>
         </div>
     </div>
 
     <div class="row">
         <div class="text-center">
+            <button type="button" class="btn btn-danger">Clear Cart</button>
             <button ng-click="checkOut()">Check Out</button>
         </div>
 
