--- a/htmlpages/views/orders.html
+++ b/htmlpages/views/orders.html
@@ -140,7 +140,8 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <button type="button" class="btn btn-default" ng-click="deleteData($index)" data-ng-show="x.readyPickup == 'true'">
+
+                                    <button type="button" class="btn btn-default" ng-click="deleteData($index)" data-ng-show="x.readyPickup">
                                         Collect!
                                     </button>
                                 </td>
