adding the coming soon!

--- a/htmlpages/views/deck.html
+++ b/htmlpages/views/deck.html
@@ -85,11 +85,17 @@
 
 
     <div class="backgroundimages">
-        <div class="row" style="height:400px;">
+        <div class="row" style="height:80px;">
             <div class="text-center">
                 <h2>The Deck @ Arts</h2>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="row" style="height:400px;">
+    <div class="text-center">
+        <h1>Coming soon!</h1>
     </div>
 </div>
 
