--- a/htmlpages/views/foodclique.html
+++ b/htmlpages/views/foodclique.html
@@ -84,11 +84,17 @@
     <br><br><br>
 
     <div class="backgroundimages">
-        <div class="row" style="height:400px;">
+        <div class="row" style="height:80px;">
             <div class="text-center">
                 <h2>Food Clique @ uTown</h2>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="row" style="height:400px;">
+    <div class="text-center">
+        <h1>Coming soon!</h1>
     </div>
 </div>
 
