--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -86,7 +86,7 @@
     <br><br><br>
 
 
-    <div class="backgroundimages">
+    <div>
         <div class="row" style="height:80px;">
             <div class="text-center">
                 <h2>The Terrace @ Biz</h2>
@@ -117,11 +117,12 @@
                                 Select Your Meal!<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="put-in-cart" data-name="Chicken rice" data-toggle="collapse"
-                                       data-parent="#accordion" href="#chickenrice" data-price="2.30">Chicken rice [$2.30]</a></li>
-                                <li><a class="put-in-cart" href="#duckrice" data-name="Duck rice" data-toggle="collapse"
-                                       data-parent="#accordion" data-price="2.50">Duck rice [$2.50]</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Char Siew rice" data-price="2.40">Char Siew rice [$2.40]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Chicken rice"
+                                       data-price="2.30">Chicken rice [$2.30]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Duck rice"
+                                        data-price="2.50">Duck rice [$2.50]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Char Siew rice"
+                                       data-price="2.40">Char Siew rice [$2.40]</a></li>
                             </ul>
                             <button class="add-to-cart" type="button">Add to Cart!</button>
                             <button class="clear-cart">Clear Cart</button>
@@ -215,8 +216,6 @@
     });
     $(".put-in-cart").click(function(event){
     event.preventDefault();
-    //var name = $(this).attr("data-name");
-    //var price = Number($(this).attr("data-price"));
     name = $(this).attr("data-name");
     price = Number($(this).attr("data-price"));
 
