changed html button to bootstrap because JS too lazy

--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -135,7 +135,7 @@
                                 <li><a class="put-in-cart" href="#" data-name="Char Siew rice"
                                        data-price="2.40">Char Siew rice [$2.40]</a></li>
                             </ul>
-                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
                         </span>
                     </div>
                 </div>
