--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -105,7 +105,7 @@
     <div class="row">
         <div class="text-center">
             <button type="button" class="btn btn-danger">Clear Cart</button>
-            <button ng-click="checkOut()">Check Out</button>
+            <button class="btn btn-success" ng-click="checkOut()">Check Out</button>
         </div>
 
     </div>
