changed formatting for first page

--- a/htmlpages/views/loggedin.html
+++ b/htmlpages/views/loggedin.html
@@ -92,7 +92,7 @@
 
     <div class="row" style="padding-top:50px;">
 
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="text-center">
                 <img class="img-circle"src="/images/deck1.jpg" alt="The Deck" width="180" height="180" ui-sref="deck">
                 <h2>The Deck</h2>
@@ -101,7 +101,7 @@
 
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="text-center">
                 <img class="img-circle" src="/images/terrace1.jpg" alt="The Terrace" width="180" height="180" ui-sref="terrace">
                 <h2>The Terrace</h2>
@@ -109,7 +109,7 @@
             </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="text-center">
                 <img class="img-circle" src="/images/frontier1.jpg" alt="The Frontier" width="180" height="180" ui-sref="frontier">
                 <h2>The Frontier</h2>
@@ -124,7 +124,7 @@
     </div>
 
     <div class="row" style="padding-top:50px;">
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="text-center">
                 <img class="img-circle" src="/images/technoedge1.jpg" alt="Technoedge" width="180" height="180" ui-sref="technoedge">
                 <h2>Technoedge</h2>
@@ -133,7 +133,7 @@
 
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="text-center">
                 <img class="img-circle" src="/images/koufu1.jpg" alt="Koufu" width="180" height="180" ui-sref="koufu">
                 <h2>Koufu</h2>
@@ -141,7 +141,7 @@
             </div>
         </div>
 
-        <div class="col-lg-4">
+        <div class="col-sm-4">
             <div class="text-center">
                 <img class="img-circle" src="/images/foodclique1.jpg" alt="FoodClique" width="180" height="180" ui-sref="foodclique">
                 <h2>Food Clique</h2>
