added bootstrap buttons

--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -165,7 +165,7 @@
                                 <li><a class="put-in-cart" href="#" data-name="Fish & Chips" data-price="3.30">Fish & Chips</a></li>
                                 <li><a class="put-in-cart" href="#" data-name="Pasta" data-price="2.50">Pasta</a></li>
                             </ul>
-                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
 
                         </span>
                     </div>
@@ -196,7 +196,7 @@
                                 <li><a class="put-in-cart" href="#" data-name="Fried Fish Bee Hoon" data-price="2.50">Fried Fish Bee Hoon</a></li>
                                 <li><a class="put-in-cart" href="#" data-name="Fried Kway Teow" data-price="3.00">Fried Kway Teow</a></li>
                             </ul>
-                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
 
                         </span>
                     </div>
@@ -227,7 +227,7 @@
                                 <li><a class="put-in-cart" href="#" data-name="Ebi Bento" data-price="4.00">Ebi Bento</a></li>
                                 <li><a class="put-in-cart" href="#" data-name="Ramen Set" data-price="3.50">Ramen Set</a></li>
                             </ul>
-                            <button class="add-to-cart" type="button">Add to Cart!</button>
+                            <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
 
                         </span>
                     </div>
