fixed carousell auto move

--- a/htmlpages/views/firstpage.html
+++ b/htmlpages/views/firstpage.html
@@ -55,7 +55,7 @@
 
     <div class="row row-centered">
 
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -134,6 +134,33 @@
 
     </div>
 
+    <script>
+        $(document).ready(function(){
+            // Activate Carousel
+            $("#myCarousel").carousel({interval: 2500});
 
+            // Enable Carousel Indicators
+            $(".item1").click(function(){
+                $("#myCarousel").carousel(0);
+            });
+            $(".item2").click(function(){
+                $("#myCarousel").carousel(1);
+            });
+            $(".item3").click(function(){
+                $("#myCarousel").carousel(2);
+            });
+            $(".item4").click(function(){
+                $("#myCarousel").carousel(3);
+            });
+
+            // Enable Carousel Controls
+            $(".left").click(function(){
+                $("#myCarousel").carousel("prev");
+            });
+            $(".right").click(function(){
+                $("#myCarousel").carousel("next");
+            });
+        });
+    </script>
 
 </div>
