--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -104,7 +104,7 @@
 
     <div class="row">
         <div class="text-center">
-            <button type="button" class="btn btn-danger">Clear Cart</button>
+            <button type="button" class="btn btn-danger clear-cart">Clear Cart</button>
             <button class="btn btn-success" ng-click="checkOut()">Check Out</button>
         </div>
 
@@ -141,7 +141,7 @@
             shoppingCart.addItemToCart(name, price, 1);
             displayCart();
         });
-        $("#clear-cart").click(function(event){
+        $(".clear-cart").click(function(event){
             shoppingCart.clearCart();
             displayCart();
         });
