added price tags to other stalls

--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -161,9 +161,12 @@
                                 Select Your Meal!<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                               <li><a class="put-in-cart" href="#" data-name="Chicken chop" data-price="3.50">Chicken Chop</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Fish & Chips" data-price="3.30">Fish & Chips</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Pasta" data-price="2.50">Pasta</a></li>
+                               <li><a class="put-in-cart" href="#" data-name="Chicken chop"
+                                      data-price="3.50">Chicken Chop [$3.50]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Fish & Chips"
+                                       data-price="3.30">Fish & Chips [$3.30]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Pasta"
+                                       data-price="2.50">Pasta [$2.50]</a></li>
                             </ul>
                             <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
 
@@ -192,9 +195,12 @@
                                 Select Your Meal!<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                               <li><a class="put-in-cart" href="#" data-name="Sliced Fish Bee Hoon" data-price="2.40">Sliced Fish Bee Hoon</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Fried Fish Bee Hoon" data-price="2.50">Fried Fish Bee Hoon</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Fried Kway Teow" data-price="3.00">Fried Kway Teow</a></li>
+                               <li><a class="put-in-cart" href="#" data-name="Sliced Fish Bee Hoon"
+                                      data-price="2.40">Sliced Fish Bee Hoon [$2.40]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Fried Fish Bee Hoon"
+                                       data-price="2.50">Fried Fish Bee Hoon [$2.50]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Fried Kway Teow"
+                                       data-price="3.00">Fried Kway Teow [$3.00]</a></li>
                             </ul>
                             <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
 
@@ -223,9 +229,12 @@
                                 Select Your Meal!<span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="put-in-cart" href="#" data-name="Chicken Teriyaki Bento" data-price="3.50">Chicken Teriyaki Bento</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Ebi Bento" data-price="4.00">Ebi Bento</a></li>
-                                <li><a class="put-in-cart" href="#" data-name="Ramen Set" data-price="3.50">Ramen Set</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Chicken Teriyaki Bento"
+                                       data-price="3.50">Chicken Teriyaki Bento [$3.50]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Ebi Bento"
+                                       data-price="4.00">Ebi Bento [$4.00]</a></li>
+                                <li><a class="put-in-cart" href="#" data-name="Ramen Set"
+                                       data-price="3.50">Ramen Set [$3.50]</a></li>
                             </ul>
                             <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
 
