--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" ng-controller="terraceCtrl">
 
     <div class="row">
         <!-- Navigation bar at the top of the page -->
@@ -132,9 +132,10 @@
                                 <li><a class="put-in-cart" href="#" data-name="Chicken rice"
                                        data-price="2.30">Chicken rice [$2.30]</a></li>
                                 <li><a class="put-in-cart" href="#" data-name="Duck rice"
-                                        data-price="2.50">Duck rice [$2.50]</a></li>
+                                       data-price="2.50">Duck rice [$2.50]</a></li>
                                 <li><a class="put-in-cart" href="#" data-name="Char Siew rice"
                                        data-price="2.40">Char Siew rice [$2.40]</a></li>
+
                             </ul>
                             <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
                         </span>
@@ -259,9 +260,9 @@
 
     });
     $(".put-in-cart").click(function(event){
-    event.preventDefault();
-    name = $(this).attr("data-name");
-    price = Number($(this).attr("data-price"));
+        event.preventDefault();
+        name = $(this).attr("data-name");
+        price = Number($(this).attr("data-price"));
 
         console.log(name);
 
