--- a/htmlpages/views/orders.html
+++ b/htmlpages/views/orders.html
@@ -121,7 +121,7 @@
                             <tr ng-repeat="y in x.orders">
 
                                 <td style="width: 70%;">
-                                    {{y.name}}
+                                    {{y.name}} x {{y.count}}
                                 </td>
                                 <td>
 
