--- a/htmlpages/views/terrace.html
+++ b/htmlpages/views/terrace.html
@@ -139,6 +139,8 @@
                             </ul>
                             <button class="btn btn-success add-to-cart" type="button">Add to Cart!</button>
                         </span>
+                        {{test}}
+
                     </div>
                 </div>
             </div>
