--- a/htmlpages/views/account.html
+++ b/htmlpages/views/account.html
@@ -93,11 +93,11 @@
     <div class="row">
         <div class="text-center">
             <div class="col-sm-offset-1 col-sm-10">
-            <ul id="show-cart">
-                <li>???????</li>
-            </ul>
-            <div>You have <span id="count-cart">X</span> items in your cart</div>
-            <div>Total Cart:$<span id="total-cart"></span></div>
+                <ul id="show-cart">
+                    <li>???????</li>
+                </ul>
+                <div>You have <span id="count-cart">X</span> items in your cart</div>
+                <div>Total Cart:$<span id="total-cart"></span></div>
             </div>
         </div>
     </div>
@@ -148,37 +148,37 @@
             price = undefined;
             displayCart();
         });
-         function displayCart() {
-         var cartArray = shoppingCart.listCart();
-         console.log(cartArray);
-         var output = "";
-             output += '<table class="table table-bordered">' + "<thead>"
+        function displayCart() {
+            var cartArray = shoppingCart.listCart();
+            console.log(cartArray);
+            var output = "";
+            output += '<table class="table table-bordered">' + "<thead>"
                     +"<tr>" + "<th>" + "Dish" + "</th>"
                     +"<th>" + "Price" + "</th>"
                     +"<th>" + "Total quantity" + "</th>"
                     +"<th>" + "Total price" + "</th>"
                     +"</tr>" + "</thead>" + "<tbody>";
-         for (var i in cartArray) {
-             output += "<tr>"
-             +"<td>" + cartArray[i].name + "</td>"
-             +"<td>"+ cartArray[i].price + "</td>"
-             +"<td>" + "<input class='item-count' type='number.toFixed(0)' data-name='"
-             +cartArray[i].name +"' value='" + cartArray[i].count+"' >"
-                     +" <button class='plus-item' data-name='"
-                     +cartArray[i].name+"'>+</button>"
-                     +" <button class='subtract-item' data-name='"
-                     +cartArray[i].name+"'>-</button>"
-                     +" <button class='delete-item' data-name='"
-                     +cartArray[i].name+"'>X</button>"
-                     + "</td>"
-             +"<td>"+cartArray[i].total + "</td>"
-             +"</tr>";
-         }
-         output += "</table>"
-         $("#show-cart").html(output);
-         $("#count-cart").html( shoppingCart.countCart() );
-         $("#total-cart").html( shoppingCart.totalCart() );
-         }
+            for (var i in cartArray) {
+                output += "<tr>"
+                        +"<td>" + cartArray[i].name + "</td>"
+                        +"<td>"+ cartArray[i].price + "</td>"
+                        +"<td>" + "<input class='item-count' type='number.toFixed(0)' data-name='"
+                        +cartArray[i].name +"' value='" + cartArray[i].count+"' >"
+                        +" <button class='plus-item' data-name='"
+                        +cartArray[i].name+"'>+</button>"
+                        +" <button class='subtract-item' data-name='"
+                        +cartArray[i].name+"'>-</button>"
+                        +" <button class='delete-item' data-name='"
+                        +cartArray[i].name+"'>X</button>"
+                        + "</td>"
+                        +"<td>"+cartArray[i].total + "</td>"
+                        +"</tr>";
+            }
+            output += "</table>"
+            $("#show-cart").html(output);
+            $("#count-cart").html( shoppingCart.countCart() );
+            $("#total-cart").html( shoppingCart.totalCart() );
+        }
 
         $("#show-cart").on("click", ".delete-item", function(event){
             var name = $(this).attr("data-name");
@@ -193,6 +193,7 @@
         $("#show-cart").on("click", ".plus-item", function(event){
             var name = $(this).attr("data-name");
             shoppingCart.addItemToCart(name, 0, 1);
+            console.log(shoppingCart.listCart());
             displayCart();
         });
         $("#show-cart").on("change", ".item-count", function(event){
